# ALGLIB

./: .gitignore  README.md
alglib-3.13.0.cpp/: CMakeLists.txt  README
alglib-3.13.0.cpp/pkg-config/: GeneratePkgConfigFile.cmake  pkg-config.pc.in
alglib-3.13.0.cpython/: manual.cpython.html
alglib_cpython/: check.py  setup.py
